# 3D-Stereo-Reconstruction

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
results/: eval_dense_matching.txt  eval_feature_detection_and_matching.txt  eval_pose.txt
src/: bundle_adjustment.cpp  bundle_adjustment.h  dataloader_mb.cpp  dataloader_mb.h  dense_matching.cpp  dense_matching.h  eight_point.cpp  eight_point.h  evaluation.cpp  evaluation.h  feature_detector.cpp  feature_detector.h  main.cpp  main2.cpp  reconstruction.cpp  reconstruction.h  rectify.cpp  rectify.h  sparse_matching.cpp  sparse_matching.h
src/useless/: dataloader_dtu.cpp  dataloader_dtu.h
